Work on the user manual updates

--- a/documentation/UserManual/sysoverview.tex
+++ b/documentation/UserManual/sysoverview.tex
@@ -1,7 +1,7 @@
-This system is designed to assist on estimations for various tasks, by providing an interface for designing project trees, performing estimations on those trees, and generating conclusive reports based on those estimations.
+This system is designed to assist with estimations on various tasks, by providing an interface for designing project trees, performing estimations on those trees, and generating conclusive reports based on those estimations.
 
-Estimations refer to quantities that are assigned to descriptive tasks, based on the time it is estimated to take to build that task. This methodology typically forms part of any Agile Software Development process.
+Estimations refer to quantities that are assigned to descriptive tasks, these quantities are based on the time it is estimated to take to complete the task. This methodology typically forms part of any Agile Software Development process.
 
-Project owners can create new project trees, which consist of various tasks and sub-tasks. Any registered user can be a project creator, and therefore the owner of said project. With the creation of a new project, the owner is prompted to add users that has the right to estimate on that specific project. These users are refered to as Estimators for the project.
+Project owners can create new project trees, which consist of various tasks and sub-tasks. Any registered user can be a project creator, and therefore the owner of said project. With the creation of a new project, the owner is prompted to add users that have the right to estimate on that specific project. These users are refered to as Estimators for the project.
 
-Estimators are notified of newly created projects on which they may estimate. After estimation is done, which is the event where all Estimators have completed estimation, the Owner is notified, and reports are generated for these estimations. Based on these reports, the Owner can prompt to reopen estimation, and discuss previous estimations.
+Estimators are notified when a project that they are an estimator for is opened for estimation. A project is opend for estimation by the owner once the owner is staisfied with the project tree. After estimation is done, which is the event where all Estimators have completed estimation, the owner is notified, and reports are generated for these estimations. Based on these reports, the owner can prompt to reopen the project for estimation and/or discuss previous estimations.
