--- a/documentation/UserManual/troubleshooting.tex
+++ b/documentation/UserManual/troubleshooting.tex
@@ -1,4 +1,4 @@
-When creating a project, the user must explicitly save the project tree. This can be done by clicking on the "Save Project" button, as seen in the bottom left corner of the figure below
+While working on a project tree, the user must explicitly save the project tree for changes to be persisted to the database. This can be done by clicking on the "Save Project" button, as seen in the bottom left corner of the figure below
 
 	\begin{figure}[H]
 	    	\centering
@@ -7,7 +7,7 @@ When creating a project, the user must explicitly save the project tree. This ca
 	    	\label{fig: Save Project}
    	\end{figure}
 
-If the user has not yet saved the project, and prompts to navigate away from editing the project, the user will be prompted with the confirmation dialog displayed in the figure below.
+If the user has not saved the project tree, and attempts to navigate away from the edit project page, the user will be prompted with the confirmation dialog displayed in the figure below.
 
 	\begin{figure}[H]
 	    	\centering
@@ -16,6 +16,6 @@ If the user has not yet saved the project, and prompts to navigate away from edi
 	    	\label{fig: Confirmation}
    	\end{figure}
 
-If the user wishes to discard changes, he/she can prompt to navigate away. Otherwise, the user can cancel the navigation process, and then save the project, and then continue to navigate away.
+If the user wishes to discard changes, he/she can navigate away from the page without saving the changes. Otherwise, the user can cancel the navigation process, and then save the project, and then continue to navigate away.
 
 A similiar process is performed when a user is in the process of Estimation.
