--- a/documentation/UserManual/usesys.tex
+++ b/documentation/UserManual/usesys.tex
@@ -48,4 +48,30 @@
 	    	\caption{Estimation Page}
 	    	\label{fig:Learning rate 0.1}
    	\end{figure}
+   	\item{Report list}
+	\newline
+	After all estimations have been done by the different estimators, a report is created and can be accessed via the "Reports" tab in the side navigation bar.
+	\begin{figure}[H]
+	    	\centering
+	    	\fbox{\includegraphics[width=0.5\textwidth]{reportlist}}
+	    	\caption{Reports Page}
+	    	\label{fig:Learning rate 0.1}
+   	\end{figure}
+   	\pagebreak
+   	\item{Report of Project}
+	\newline
+	The report system consists of two graphic reports which is a bar graph and a box plot to show the relationships of the estimations of the different modules in the tree projects.
+	\begin{figure}[H]
+	    	\centering
+	    	\fbox{\includegraphics[width=0.5\textwidth]{bar}}
+	    	\caption{Bar Graph}
+	    	\label{fig:Learning rate 0.1}
+   	\end{figure}
+   	\begin{figure}[H]
+   			\centering
+	    	\fbox{\includegraphics[width=0.5\textwidth]{boxplot}}
+	    	\caption{Box Plot}
+	    	\label{fig:Learning rate 0.1}
+   	\end{figure}
 \end{itemize}
+\pagebreak
