More updates to the user manual

--- a/documentation/UserManual/usesys.tex
+++ b/documentation/UserManual/usesys.tex
@@ -1,8 +1,8 @@
 \subsection{Creating a project}
 \begin{itemize}
-	\item{Navigate to project list page}
+	\item{Navigate to projects list page}
 	\newline
-	After you have signed in you will be navigated to the projects list page, if you are navigating there from another page, you can simply click on the projects tab on the left side navigation bar.
+	After you have signed in you will be navigated to the projects list page, if you wish to navigating there from another page, you can simply click on the projects tab on the left side navigation bar.
 	\begin{figure}[H]
 	    	\centering
 	    	\fbox{\includegraphics[width=0.5\textwidth]{projectsList}}
@@ -11,7 +11,7 @@
    	\end{figure}
 	\item{Add a new project}
 	\newline
-	On the project list page, you can simply click on the "add project" button that is in the top right hand corner of the screen.
+	On the projects list page, you can simply click on the "add project" button that is in the top right hand corner of the screen.
 	\begin{figure}[H]
 	    	\centering
 	    	\fbox{\includegraphics[width=0.5\textwidth]{addButton}}
@@ -32,7 +32,7 @@
 \begin{itemize}
 	\item{Create Project Tree}
 	\newline
-	From here you will have to create a project tree that represent the project that you need an estimation on. You can do this by adding nodes, by clicking on the "Add node" buttons, to the project tree and naming them appropriately. You can save the tree by clicking on the "Save Project" button to continue editing the tree at a later point. When you are satisfied with the tree, you can open it for estimation, by clicking on the "Open For Estimation" button. After the project has been opened for estimation, it can not be edited again. Emails will be sent out the users that were chosen to estimate on the project to inform them that the project is now available for estimation.
+	From here you will have to create a project tree that represents the project that you need an estimation on. You can do this by adding nodes, this is done by clicking on the "Add node" button, to the project tree and naming them appropriately. You can save the tree by clicking on the "Save Project" button to continue editing the tree at a later point. When you are satisfied with the tree, you can open it for estimation, by clicking on the "Open For Estimation" button. After the project has been opened for estimation, it can not be edited again. Emails will be sent out the users that were chosen to estimate on the project to inform them that the project is now available for estimation.
 	\begin{figure}[H]
 	    	\centering
 	    	\fbox{\includegraphics[width=0.5\textwidth]{createTree}}
@@ -41,16 +41,19 @@
    	\end{figure}
 	\item{Estimating}
 	\newline
-	The estimators can nou estimate on each of the leaf nodes of the project. These values on the leaf nodes then buble up to their parent nodes, all the way up the tree to the root node. This value at the highest root node, then gives the total value of the whole tree, i.e. the total estimation that the estimator estimated on the project. When the estimator is done, he/she can click on the "Submit Estimation" button to submit his/her estimation to the project owner.
+	The estimators can now estimate on each of the leaf nodes of the project. The values on the leaf nodes will then bubble up to their parent nodes, all the way up the tree to the root node. This value at the highest root node, then gives the total value of the whole tree, i.e. the total estimation that the estimator estimated on the project. When the estimator is done, he/she can click on the "Submit Estimation" button to submit his/her estimation to the project owner.
 	\begin{figure}[H]
 	    	\centering
 	    	\fbox{\includegraphics[width=0.5\textwidth]{estimate}}
 	    	\caption{Estimation Page}
 	    	\label{fig:Learning rate 0.1}
    	\end{figure}
+\end{itemize}
+\subsection{Reporting}
+\begin{itemize}
    	\item{Report list}
 	\newline
-	After all estimations have been done by the different estimators, a report is created and can be accessed via the "Reports" tab in the side navigation bar.
+	After all estimations have been done by the different estimators, a report is created. It can then be accessed via the "Reports" tab in the side navigation bar.
 	\begin{figure}[H]
 	    	\centering
 	    	\fbox{\includegraphics[width=0.5\textwidth]{reportlist}}
@@ -60,7 +63,7 @@
    	\pagebreak
    	\item{Report of Project}
 	\newline
-	The report system consists of two graphic reports which is a bar graph and a box plot to show the relationships of the estimations of the different modules in the tree projects.
+	The report system consists of two graphic reports which are a bar graph and a box plot to show the relationships of the estimations of the different modules in the tree projects.
 	\begin{figure}[H]
 	    	\centering
 	    	\fbox{\includegraphics[width=0.5\textwidth]{bar}}
