Extended the scope of Reporting and updated Notification to include new reporting functions

--- a/documentation/SoftwareReq/usecase.tex
+++ b/documentation/SoftwareReq/usecase.tex
@@ -239,6 +239,8 @@ The scope of this module will be accessible to any user at this point in the dev
    	\end{figure}
 	\paragraph{Generate Graphs - priority:critical}
 	User accessing this function will receive a series of graphs of the data for the chosen project. 
+	This will include for example a Bar Graph and Box Plot. The statistical data from the Delphi wide-band method 
+	will be used as input to the graphs.
 	\begin{figure}[H]
 	    	\centering
 	    	\fbox{\includegraphics[width=0.8\textwidth]{Report_GraphGeneration}}
