--- a/documentation/SoftwareReq/usecase.tex
+++ b/documentation/SoftwareReq/usecase.tex
@@ -134,20 +134,6 @@ This enables users to update projects, if they have sufficient privileges, by ad
    	\end{figure}
 \end{itemize}
 
-\paragraph{Publish project - priority: critical}
-This enables users to publish projects for other users to estimate. The reason for this is to control when another user sees the project in his/her projects list and is able to estimate on the project.
-
-\begin{itemize}
-	\item Services contract:\\ \\
-	The publishProjectRequest will simply contain the userID of the person publishing the project as well as the projectID of the project being published. The publishProjectResult will contain minimal information, possibly only whether the publish was successfull.
-	\begin{figure}[H]
-    	\centering
-    	\fbox{\includegraphics[width=1.0\textwidth]{publishProject}}
-    	\caption{Publish project services contract}
-    	\label{fig:publishProject}
-   	\end{figure}
-\end{itemize}
-
 \subsubsection{Domain model}
 The domain model for the Project module requires that tasks being created and added to the tree, be persisted. Each project holds a reference to its parent, which is also of type Project. Furthermore, each Project holds a list of all its children, which once again, are also of type Project. Each instance of Project is represented as a Task object, which contains references to estimations made on that specific task.
 \begin{figure}[H]
@@ -171,6 +157,21 @@ The domain model for the Project module requires that tasks being created and ad
 	    	\label{fig:Estimation_Scope}
    	\end{figure}
 \subsubsection{Use cases}
+	\paragraph{openEstimation- priority: critical}
+	This enables users to reopen projects for other users to estimate. The reason for this is to control when another user sees the project in his/her projects list and is able to estimate on the project for another round.
+
+	\begin{itemize}
+		\item Services contract:\\ \\
+		The reopenEstimationRequest will simply contain the userID of the person publishing the project as well as the projectID of the project being published.
+		\begin{figure}[H]
+	    	\centering
+	    	\fbox{\includegraphics[width=1.0\textwidth]{publishProject}}
+	    	\caption{openEstimation services contract}
+	    	\label{fig:publishProject}
+	   	\end{figure}
+	\end{itemize}
+
+
 	\paragraph{estimateTask - priority:critical}This system will allow a user to place an estimation on a task.
 	\begin{figure}[H]
 	    	\centering
@@ -178,20 +179,51 @@ The domain model for the Project module requires that tasks being created and ad
 	    	\caption{Estimate Task}
 	    	\label{fig:Estimation_estimateTask.png}
    	\end{figure}
-	\paragraph{calculateTotalEstimation - priority:critical}This system will traverse the project tree and calculate the total estimation of a project.
+
+	\paragraph{calculateTotalEstimation - priority:important}This system will traverse the project tree and calculate the total estimation of a project.
 	\begin{figure}[H]
 	    	\centering
 	    	\fbox{\includegraphics[width=0.9\textwidth]{Estimation_calculateTotalEstimation}}
 	    	\caption{Calculate total estimation}
 	    	\label{fig:Estimation_calculateTotalEstimation.png}
    	\end{figure}
-	\paragraph{viewEstimation - priority:critical}A user will be able to view his/her previous estimations for each project as a whole or for a specific node in the tree. Estimations made by other users will be hidden and only revealed when the project owner publishes the results. ViewEstimation will make use of the calculateTotalEstimation to calculate the estimation for a specific node in the project tree.
+
+	\paragraph{viewEstimation - priority:important}A user will be able to view his/her previous estimations for each project as a whole or for a specific node in the tree. Estimations made by other users will be hidden and only revealed when the project owner publishes the results. ViewEstimation will make use of the calculateTotalEstimation to calculate the estimation for a specific node in the project tree.
 	\begin{figure}[H]
 	    	\centering
 	    	\fbox{\includegraphics[width=0.9\textwidth]{Estimation_viewEstimation}}
 	    	\caption{View estimation for user}
 	    	\label{fig:Estimation_viewEstimation.png}
    	\end{figure}
+
+	\paragraph{Add/Remove estimators - priority: important}
+	Users with sufficient privileges can edit the estimators of a project. The changes to the estimators will then be propogated through the project tree and persisted to the database if the user chooses so.
+
+	\begin{itemize}
+		\item Services contract:\\ \\
+		The user will be provided with a list of the current estimators as well as a list of possible estimators. The user will choose which estimators to add or remove.
+		\begin{figure}[H]
+	    	\centering
+	    	\fbox{\includegraphics[width=1.0\textwidth]{servicesContractAddRemoveEstimator}}
+	    	\caption{addRemoveEstimator services contract}
+	    	\label{fig:addremove_estimators_services_contract}
+	   	\end{figure}
+	\end{itemize}
+
+	\paragraph{reopenEstimation- priority: critical}
+	This enables users to publish projects for other users to estimate. The reason for this is to control when another user sees the project in his/her projects list and is able to estimate on the project.
+
+	\begin{itemize}
+		\item Services contract:\\ \\
+		The OpenEstimationRequest will simply contain the userID of the person publishing the project as well as the projectID of the project being published. The openEstimationResult will contain minimal information, possibly only whether the publish was successfull.
+		\begin{figure}[H]
+	    	\centering
+	    	\fbox{\includegraphics[width=1.0\textwidth]{servicesContractReopenEstimation}}
+	    	\caption{reopenEstimation services contract}
+	    	\label{fig:publishProject}
+	   	\end{figure}
+	\end{itemize}
+
 \subsubsection{Domain model}
 	\begin{figure}[H]
 	    	\centering
@@ -199,21 +231,6 @@ The domain model for the Project module requires that tasks being created and ad
 	    	\caption{Estimation Domain}
 	    	\label{fig:Estimation_Domain.png}
    	\end{figure}
-
-\paragraph{Add/Remove estimators - priority: critical}
-Users with sufficient privileges can edit the estimators of a project. The changes to the estimators will then be propogated through the project tree and persisted to the database if the user chooses so.
-
-\begin{itemize}
-	\item Services contract:\\ \\
-	The user will be provided with a list of the current estimators as well as a list of possible estimators. The user will choose which estimators to add or remove.
-	\begin{figure}[H]
-    	\centering
-    	\fbox{\includegraphics[width=1.0\textwidth]{servicesContractcreateProject}}
-    	\caption{createProject services contract}
-    	\label{fig:addremove_estimators_services_contract}
-   	\end{figure}
-\end{itemize}
-
 %============================
 %Report
 %============================
