--- a/documentation/SoftwareReq/Software requirements.tex
+++ b/documentation/SoftwareReq/Software requirements.tex
@@ -64,7 +64,7 @@ Chris Cloete 13029721\\}
 	\input{archconst.tex}
 
 	\input{archpatterns.tex}
-	\input{archtactics.tex}
+	% \input{archtactics.tex}
 	\input{tech.tex}
 	
 \newpage
