--- a/documentation/UserManual/Installation.tex
+++ b/documentation/UserManual/Installation.tex
@@ -4,18 +4,18 @@
 	    	\caption{MEAN.js logo}
 	    	\label{fig:MEAN}
    	\end{figure}
-The installation is quite a easy process as estimate swarm uses standard web technologies. We can deploy our system in one of two ways. Either it can use a docker image to load the system or it can set up by loading all the dependancies to a machine. Estimation swarm is using the mean stack should you encounter any issues please consult their webpage. \url{http://mean.io}. The github readme also houses the installation instructions.
+The installation is quite an easy process as estimate swarm uses standard web technologies. We can deploy our system in one of two ways. One way is to use a docker image to load the system the other is to set it up by loading all the dependancies to a machine. Estimation swarm is using the mean stack so should you encounter any issues please consult their webpage. \url{http://mean.io}. The github readme also houses the installation instructions.
 \subsection{Setting up the environment}
-To use our application the following prerequisites are required. Please note that installing packages globally requires that sudo command on unix based systems and administrator privileges on windows.
+To use our application the following prerequisites need to be met. Please note that installing packages globally requires super user privillages on unix based systems and administrator privileges on windows.
 \begin{itemize}
-	\item git and gitHub. It is important to have a good understanding of the following technologies and they must be installed on your system for development.
-	\item NPM(Node Package manager) and node.js 
+	\item git. It is important to have a good understanding of this technology. It must be installed on your system for development.
+	\item NPM(Node Package manager) and node.js
 	For the latest information on installing npm please visit \url{https://nodejs.org/download/} Once you have this setup properly it is important to make sure you have the latest version installed.
 	\item BOWER for client side dependancies.
 	This technologie works with our stack and the latest version can be installed by making use of npm.
 	\newline
-	npm install -g bower 
-	\item MongoDB document database. Mongo has very different installation instructions based on the operating system being used thus it is best to consult the following website \url{https://www.mongodb.org}.
+	npm install -g bower
+	\item MongoDB document database. Mongo has different installation instructions based on the operating system being used thus it is best to consult the following website \url{https://www.mongodb.org} for the instructions.
 	\item GRUNT task manager. GRUNT can be installed through npm. 
 	\newline
 	npm install -g grunt-cli
