Replaced LDAP constraint with D3

--- a/documentation/SoftwareReq/archconst.tex
+++ b/documentation/SoftwareReq/archconst.tex
@@ -1,7 +1,5 @@
 \subsection{Architectural Constraints}
 The client has requested to make use of the following protocol:
 \begin{itemize}
-	\item LDAP
-	\\ \\
-	LDAP must be used to allow the system to integrate with the existing user database as provided by the client.
+	\item D3.js
 \end{itemize}
