Added arch tactics for reliability

--- a/documentation/SoftwareReq/qualityrequirements.tex
+++ b/documentation/SoftwareReq/qualityrequirements.tex
@@ -31,8 +31,12 @@
 	{\bfseries Reliability:}
 	The system must be produced to be reliable, so that the client always has a reference to estimations made, without being concerned whether the system is running or not. The system needs to be reliable since the access to the data and results will be sporadic and can occur at almost any time.
 	% \\ \\
-	% \begin{itemize}
-	% \end{itemize}
+		\begin{itemize}
+			\item{\bfseries Contracts Based Development:}
+				Contracts will be enforced to ensure that faluts within the system are prevented.
+			\item{\bfseries Error/exception comunication:}
+				Exceptions will be used in order to detect faults, this will aloow them to be dealt with in the correct manor.
+		\end{itemize}
 	\begin{center}
 	\line(1, 0){250}
 	\end{center}
