Working on the usermanual to explain graphs

--- a/documentation/UserManual/usesys.tex
+++ b/documentation/UserManual/usesys.tex
@@ -49,3 +49,18 @@
 	    	\label{fig:Learning rate 0.1}
    	\end{figure}
 \end{itemize}
+\subsection{Reports}
+After the estimation has been completed a report will be generated based on the current structure of the project. This report will automatically provide you with three graphs. Each graph deals with a different aspect of the Delphi Wide Band method. 
+\begin{itemize}
+	\item{Bar Graph}
+		\begin{figure}[H]
+	    	\centering
+	    	\fbox{\includegraphics[width=0.5\textwidth]{bargraph}}
+	    	\caption{Bar Graph}
+	    	\label{fig:Bar Graph}
+   	\end{figure}
+	\item{Box Plot}
+	\item{Tree Plot}
+	\item{Delphi Wide Band Normal Distrubution}
+\end{itemize}
+
