--- a/documentation/UserManual/usesys.tex
+++ b/documentation/UserManual/usesys.tex
@@ -59,7 +59,14 @@ After the estimation has been completed a report will be generated based on the 
 	    	\caption{Bar Graph}
 	    	\label{fig:Bar Graph}
    	\end{figure}
+	The purpose of the bar graph is to give a user the indication of who has estimated what value. Each estimator's estimation will be indicated as a bar. The bar graph also indicated the structure of the project. 
 	\item{Box Plot}
+	\begin{figure}[H]
+	    	\centering
+	    	\fbox{\includegraphics[width=0.5\textwidth]{boxplot}}
+	    	\caption{Box Plot}
+	    	\label{fig:Box Plot}
+   	\end{figure}
 	\item{Tree Plot}
 	\item{Delphi Wide Band Normal Distrubution}
 \end{itemize}
