Add ing information regarfding the normal distrubution

--- a/documentation/UserManual/usesys.tex
+++ b/documentation/UserManual/usesys.tex
@@ -67,7 +67,22 @@ After the estimation has been completed a report will be generated based on the 
 	    	\caption{Box Plot}
 	    	\label{fig:Box Plot}
    	\end{figure}
+	The purpose of the box plot is to show each item in the project tree and indicate if users are estimating the same amount or not. The box plot that have small whiskers indicate that the users generally agree on a item. If a whisker does not fall outside the box plot it indicates that all estimations are within one standard deviation of the mean(Average). The box plot also makes use of a bar graph to indicate what the mean is and how much a particular item is contributing to the main goal of the project.
 	\item{Tree Plot}
-	\item{Delphi Wide Band Normal Distrubution}
+	\begin{figure}[H]
+	    	\centering
+	    	\fbox{\includegraphics[width=0.5\textwidth]{treeplot}}
+	    	\caption{Tree Plot}
+	    	\label{fig:Tree Plot}
+   	\end{figure}
+	The Tree Plot is a collapsable and expandable graph of the tree's structure. it purpose is to allow a user to interrogate a specific aspect of the project. These interrogations will generally lead to a indication of where problems lies in a project. Nodes can be collapsed and expanded as the user requires it. 
+	\item{Delphi Wide Band Normal Distribution}
+	\begin{figure}[H]
+	    	\centering
+	    	\fbox{\includegraphics[width=0.5\textwidth]{normaldist}}
+	    	\caption{Delphi Wide Band Normal Distribution}
+	    	\label{fig:Delphi Wide Band Normal Distribution}
+   	\end{figure}
+	The normal distribution is a important part of the delphi wide band method. It indicates to the user if there is consensus regarding project as a whole. Typically a value between 10 percent to 20 percent indicate that the users have consensus. Anything lower than 10 percent indicate that there is still room for improvement. The higher the value of the y axis is the closer estimations are grouped together. The lower y axis value is the estimations is spread out and generally users do not agree on particular project.
 \end{itemize}
 
