Small update to graph number

--- a/documentation/UserManual/usesys.tex
+++ b/documentation/UserManual/usesys.tex
@@ -50,7 +50,7 @@
    	\end{figure}
 \end{itemize}
 \subsection{Reports}
-After the estimation has been completed a report will be generated based on the current structure of the project. This report will automatically provide you with three graphs. Each graph deals with a different aspect of the Delphi Wide Band method. 
+After the estimation has been completed a report will be generated based on the current structure of the project. This report will automatically provide you with four graphs. each graph deals with a different aspect of the Delphi Wide Band method. 
 \begin{itemize}
 	\item{Bar Graph}
 		\begin{figure}[H]
