Update to reflect system update with regards to project estimation

--- a/documentation/UserManual/usesys.tex
+++ b/documentation/UserManual/usesys.tex
@@ -41,7 +41,7 @@
    	\end{figure}
 	\item{Estimating}
 	\newline
-	The estimators can nou estimate on each of the leaf nodes of the project. These values on the leaf nodes then buble up to their parent nodes, all the way up the tree to the root node. This value at the highest root node, then gives the total value of the whole tree, i.e. the total estimation that the estimator estimated on the project. When the estimator is done, he/she can click on the "Submit Estimation" button to submit his/her estimation to the project owner.
+	The estimators can now estimate on each of the leaf nodes of the project. The values on the leaf nodes then bubble up to their parent nodes. The value at the highest root node, then gives the total value of the whole tree, i.e. the total estimation that the estimator estimated on the project. When the estimator is done, he/she can click on the "Submit Estimation" button to submit his/her estimation to the project owner.
 	\begin{figure}[H]
 	    	\centering
 	    	\fbox{\includegraphics[width=0.5\textwidth]{estimate}}
