Added client name to title page

--- a/documentation/UserManual/usermanual.tex
+++ b/documentation/UserManual/usermanual.tex
@@ -29,7 +29,9 @@
 
 \begin{document}
 \title{Estimation Swarm User Manual}
-\subtitle{ Git: \url{https://github.com/FrikkieSnyman/COS301_GroupProject}}
+\subtitle{ Git: \url{https://github.com/FrikkieSnyman/COS301_GroupProject}\\
+Client: Epi-Use
+}
 
 \author{\textbf{COS301 Main Project - The fellowship of the CIN}\\
 Frikkie Snyman 13028741\\
