--- a/documentation/UserManual/usesys.tex
+++ b/documentation/UserManual/usesys.tex
@@ -41,7 +41,7 @@
    	\end{figure}
 	\item{Estimating}
 	\newline
-	The estimators can now estimate on each of the leaf nodes of the project. The values on the leaf nodes then bubble up to their parent nodes. The value at the highest root node, then gives the total value of the whole tree, i.e. the total estimation that the estimator estimated on the project. When the estimator is done, he/she can click on the "Submit Estimation" button to submit his/her estimation to the project owner.
+	The estimators can now estimate on each of the leaf nodes of the project. The values on the leaf nodes then bubble up to their respective parent nodes. The values in the "Project Estimation Total" list reflect the total estimations for the entire project for the current estimator. When the estimator is done, he/she can click on the "Submit Estimation" button to submit his/her estimation to the project owner.
 	\begin{figure}[H]
 	    	\centering
 	    	\fbox{\includegraphics[width=0.5\textwidth]{estimate}}
