Fixed naming error with image

--- a/documentation/UserManual/gettingstarted.tex
+++ b/documentation/UserManual/gettingstarted.tex
@@ -5,7 +5,7 @@
 	You will need to add an account to be able to sign into the system.
 	\begin{figure}[H]
 	    	\centering
-	    	\fbox{\includegraphics[width=0.5\textwidth]{SignUP}}
+	    	\fbox{\includegraphics[width=0.5\textwidth]{SignUp}}
 	    	\caption{Sign Up}
 	    	\label{fig:Learning rate 0.1}
    	\end{figure}
