--- a/documentation/SoftwareReq/intro.tex
+++ b/documentation/SoftwareReq/intro.tex
@@ -1,1 +1,1 @@
-The aim of this document is to provide the reader with sufficient insight into the system at hand, so that the system can be maintained and developed by a third-party without further input needed. The initial development of this system made use of agile software development, and thus, not all specifications, as provided by the client, is known beforehand. The client, however will form an integral part in the constant development of this system due to the aforementioned reasons. This document, acts as an initial impression of the Architectural and Functional requirements for the project at hand.
+The aim of this document is to provide the reader with sufficient insight into the system at hand, so that the system can be maintained and developed by a third-party without further input needed. The initial development of this system made use of agile software development, and thus, not all specifications, as provided by the client, is known beforehand. The client, however will form an integral part in the constant development of this system due to the aforementioned reasons. This document acts as an initial impression of the Architectural and Functional requirements for the project at hand.
