Added discussTask use case

--- a/documentation/SoftwareReq/usecase.tex
+++ b/documentation/SoftwareReq/usecase.tex
@@ -105,7 +105,7 @@ Users with sufficient privileges can retrieve projects to view them, or to be us
    	\end{figure}
 \end{itemize}
 
-\paragraph{Delete project}
+\paragraph{Delete project - priority: important}
 Projects can be removed from the database entirely by deleting them. This action can only be done by authorised user such as the owner of a project.
 
 \begin{itemize}
@@ -131,6 +131,20 @@ This enables users to update projects, if they have sufficient privileges, by ad
     	\fbox{\includegraphics[width=1.0\textwidth]{servicesContractupdateProject}}
     	\caption{updateProject services contract}
     	\label{fig:updateProject_services_contract}
+   	\end{figure}
+\end{itemize}
+
+\paragraph{Discuss task - priority: important}
+Tasks that form part of projects can be discussed on in a chat system. All discussions are saved to the database and update in real-time.
+
+\begin{itemize}
+	\item Services contract:\\ \\
+	The discussTaskRequest contains information about the task that is being discussed. The taskID must exist within the project
+	\begin{figure}[H]
+    	\centering
+    	\fbox{\includegraphics[width=1.0\textwidth]{servicesContractDiscussTask}}
+    	\caption{discussTask services contract}
+    	\label{fig:discussTask_services_contract}
    	\end{figure}
 \end{itemize}
 
